--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.8",
     "react-hot-toast": "^2.5.2",
+    "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.15.0",
     "web-vitals": "^2.1.4"
