--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
+    "framer-motion": "^12.18.1",
     "frontend": "file:",
     "jspdf": "^3.0.0",
     "lucide-react": "^0.479.0",
